Fix boxes spacing

--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ button {
     align-items: center;
     flex-direction: column;  
     margin-bottom: 10vh;
+    margin-top: 10vh;
 }
 
 .text {
